# Shuttle2

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .yamllint.yml  CONTRIBUTING.md  FTS_IMPLEMENTATION_SUMMARY.md  FUZZY_SEARCH_ANALYSIS.md  ITUNES_SYNC_IMPLEMENTATION.md  LICENSE  PLAYLIST_SYNC_ARCHITECTURE.md  README.md  SEARCH_HIGHLIGHTING_EXPLAINED.md  SEARCH_REDESIGN_PROPOSAL.md  build.gradle  build.gradle.kts  gradle.properties  keystore.ks  settings.gradle  update-exoplayer-win-2.sh  update-exoplayer-win.sh  update-exoplayer.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md  tech_task.md
.github/workflows/: continuous-integration.yml  continuous_deployment.yml  shellcheck.yml  yamllint.yml
.jenkins/: Jenkinsfile  deploy.sh  notify.sh  test.sh
.translations/: translation_import.sh
Support/Scripts/: InstrumentedTest  Lint  unit-test
android/app/: build.gradle.kts  google-services.json  proguard-rules.pro
android/composeui/: build.gradle.kts
android/core/: build.gradle
android/data/: build.gradle.kts
android/imageloader/: build.gradle  consumer-rules.pro
android/networking/: build.gradle
android/playback/: build.gradle
android/recyclerview-adapter/: build.gradle
android/remote-config/: build.gradle.kts
android/saf/: build.gradle
android/trial/: build.gradle
androidApp/s2-compose/: build.gradle.kts
app/: build.gradle  build.gradle.kts  proguard-rules.pro
assets/: Icon.psd
build-logic/: settings.gradle.kts
build-logic/convention/: build.gradle.kts
buildSrc/: build.gradle.kts
core/: build.gradle
exoplayer/: .gitignore  build.gradle
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
imageloader/: build.gradle
iosApp/iosApp.xcodeproj/: project.pbxproj
mediaprovider/core/: build.gradle
mediaprovider/emby/: build.gradle
mediaprovider/jellyfin/: build.gradle
mediaprovider/local/: CMakeLists.txt  build.gradle
mediaprovider/mock/: build.gradle
mediaprovider/plex/: build.gradle
networking/: build.gradle
playback/: build.gradle
recyclerview-adapter/: build.gradle
remote-config/: build.gradle.kts
saf/: build.gradle
shared/data/: build.gradle.kts
shared/database/: build.gradle.kts
shared/deviceinfo/: build.gradle.kts
shared/inject/: build.gradle.kts
shared/logging/: build.gradle.kts
shared/main/: build.gradle.kts
shared/mediaimport/: build.gradle.kts
shared/mediaprovider/: build.gradle.kts
shared/mediascanner/: build.gradle.kts
shared/networking/: build.gradle.kts
shared/parcel/: build.gradle.kts
shared/preferences/: build.gradle.kts
shared/repository/: build.gradle.kts
shared/savedstate/: build.gradle.kts
shared/ui/: build.gradle.kts
support/scripts/: instrumented-test  lint  unit-test
taglib/: CMakeLists.txt  build.gradle
taglib/lib/: CMakeLists.txt  build.gradle
taglib/lib/distribution/taglib/include/: dsfproperties.h
taglib/lib/src/androidTest/java/com/simplecityapps/taglib/: ExampleInstrumentedTest.java
taglib/lib/src/main/cpp/: ArtworkProvider.cpp  CMakeLists.txt  FileScanner.cpp
taglib/lib/src/main/java/com/simplecityapps/taglib/: ArtworkProvider.kt  AudioFile.kt  FileScanner.kt
taglib/lib/src/main/res/values/: strings.xml
taglib/src/main/: AndroidManifest.xml
taglib/src/main/cpp/: ArtworkProvider.cpp  FileScanner.cpp
taglib/src/main/cpp/taglib-2/: ConfigureChecks.cmake  INSTALL.md  NEWS
taglib/src/main/cpp/taglib-2/cmake/modules/: TestLargeFiles.cmake
taglib/src/main/cpp/taglib-2/taglib/: audioproperties.h  tagunion.cpp  tagunion.h
taglib/src/main/cpp/taglib-2/taglib/asf/: asftag.cpp  asftag.h
taglib/src/main/cpp/taglib-2/taglib/ebml/matroska/: ebmlmatroskafile.h
taglib/src/main/cpp/taglib-2/taglib/mod/: modtag.cpp
taglib/src/main/cpp/taglib-2/taglib/mp4/: mp4tag.cpp  mp4tag.h
taglib/src/main/cpp/taglib-2/taglib/mpeg/: mpegfile.cpp
taglib/src/main/cpp/taglib-2/taglib/mpeg/id3v1/: id3v1tag.cpp  id3v1tag.h
taglib/src/main/cpp/taglib-2/taglib/mpeg/id3v2/: id3v2.2.0.txt  id3v2header.h  id3v2tag.cpp  id3v2tag.h
taglib/src/main/cpp/taglib-2/taglib/ogg/: xiphcomment.h
taglib/src/main/cpp/taglib-2/taglib/toolkit/: tstring.cpp
taglib/src/main/java/com/simplecityapps/taglib/: ArtworkProvider.kt
taglib/src/test/java/com/simplecityapps/taglib/: ExampleUnitTest.java
trial/: build.gradle
(+2800 files in other folders)
